fixed alignment

--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@ color: #777
  } 
 
 .more-articles{
-    display: inline-block;
     padding: 1em;
     text-align: center;
     font: Roboto Slab;
 }
 
-p{
+.more-articles p{
     text-align:left;
+    width: 50%;
 }
 
 a{
@@ -48,10 +48,18 @@ a{
 
 img{
     display: block;
-    position:relative;
     
 }
 
 h4{
     text-align: left;
+}
+
+nav{
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+}
+
+.more-articles > section{
+    display: inline-block;
 }
